--- a/src/content/post/abyss-the-wraiths-of-eden.mdx
+++ b/src/content/post/abyss-the-wraiths-of-eden.mdx
@@ -15,12 +15,12 @@ export const data = {
   "App_Version":"3.0",
   "App_Url":"https://abyss-the-wraiths-of-eden.software.informer.com/",
   "App_Developer":"CyberLink Corp.",
+  "App_Image": "https://img.informer.com/p6/cyberlink-powerdirector-365-v22-initial-window.png",
+  "App_Download_Url": "https://abyss-the-wraiths-of-eden.software.informer.com/",
   "App_Content":[{
 		"App_Review": "<p>Discover and investigate a forgotten underwater city built in an intriguing Art-Deco style. This former utopia hides many spine-chilling secrets and supernatural forces, the remains of which still lurk in every corner. Face the ancient evil that is hiding in the deepest chambers of the city of Eden.</p><p>During your exploration of this Eden beneath this sea, you will solve cleverly designed minigames and find hidden objects or play a special minigame as an alternative. Hold your breath and dive into the game to experience the wonders of the underworld for yourself.</p>",
 		"Pros": ["Provides a comfortable and secure seat for toddlers on the go.", "Folds compactly for effortless storage in overhead bins or under airplane seats.", "Features a spacious interior to fit kids' essentials, toys, and snacks.", "Equipped with sturdy wheels and a durable construction for seamless maneuvering.", "Multipurpose design that doubles as a convenient storage solution away from travel."],
-		"Cons": ["May be heavy when fully packed.", "Seat may not be suitable for older or larger children."],
-		"App_Image": "https://img.informer.com/p6/cyberlink-powerdirector-365-v22-initial-window.png",
-    "App_Download_Url": "https://abyss-the-wraiths-of-eden.software.informer.com/"
+		"Cons": ["May be heavy when fully packed.", "Seat may not be suitable for older or larger children."]
 	}],
   "qa": [{
 		"q": "What are the benefits of using a multipurpose suitcase with a kids seat?",
